force-app/main/default/objects/Location/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <label>Facility ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>