force-app/main/default/objects/Location/fields/Owner_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Owner_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>