force-app/main/default/objects/Location/fields/Used_for_Andrology__c.field-meta.xml
<CustomField>
    <fullName>Used_for_Andrology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for Andrology</label>
    <type>Checkbox</type>
</CustomField>