force-app/main/default/objects/Location/fields/Used_for_OPU__c.field-meta.xml
<CustomField>
    <fullName>Used_for_OPU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for OPU</label>
    <type>Checkbox</type>
</CustomField>