force-app/main/default/objects/Location/listViews/All_Locations.listView-meta.xml
<ListView>
    <fullName>All_Locations</fullName>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <filterScope>Mine</filterScope>
    <label>All Locations</label>
</ListView>